--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
+        "@js-temporal/polyfill": "^0.2.0",
         "express": "^4.17.1",
         "express-graphql": "^0.12.0",
         "graphql": "^15.5.3",
+        "mysql2": "^2.3.0",
         "typescript": "^4.4.3"
     },
     "devDependencies": {
