--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Private API for the dutchtime manager app.",
     "main": "out/server.js",
     "scripts": {
-        "start": "tsc && node out/server.js",
+        "start": "tsc; node out/server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Alex",
@@ -14,6 +14,7 @@
         "@js-temporal/polyfill": "^0.2.0",
         "express": "^4.17.1",
         "express-graphql": "^0.12.0",
+        "googleapis": "^87.0.0",
         "graphql": "^15.5.3",
         "mysql2": "^2.3.0",
         "typescript": "^4.4.3"
