--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
-        "@types/graphql": "^14.5.0"
-    },
-    "graphql": {
-        "schema": "./src/schema.gql"
+        "@types/graphql": "^14.5.0",
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "@typescript-eslint/parser": "^4.33.0",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.24.2"
     }
 }
