--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.17.1",
         "express-graphql": "^0.12.0",
         "googleapis": "^87.0.0",
+        "googleapis-common": "^5.0.5",
         "graphql": "^15.5.3",
         "mysql2": "^2.3.0",
         "typescript": "^4.4.3"
