--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "out/server.js",
     "scripts": {
         "start": "tsc; node out/server.js",
+        "no-build": "node out/server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Alex",
@@ -17,7 +18,7 @@
         "googleapis": "^87.0.0",
         "googleapis-common": "^5.0.5",
         "graphql": "^15.5.3",
-        "mysql2": "^2.3.0",
+        "mysql2-async": "^1.1.1",
         "typescript": "^4.4.3"
     },
     "devDependencies": {
