--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build
       run: |
-        npm install
+        npm ci
         gulp
         
     - name: Upload a Build Artifact
