Maybe it will work with npm ci --dev

--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build
       run: |
-        npm ci
+        npm cide --dev
         gulp
         
     - name: Upload a Build Artifact
