--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@typescript-eslint/parser": "^4.33.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.24.2"
+        "eslint-plugin-import": "^2.24.2",
+        "gulp": "^4.0.2",
+        "gulp-typescript": "^6.0.0-alpha.1"
     }
 }
