--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Alex",
-    "license": "MIT",
+    "license": "MPL-2.0",
     "private": true,
     "dependencies": {
         "@js-temporal/polyfill": "^0.2.0",
