--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: Package
       run: |
-        cp package.json package-lock.json LICENCE README.md out/
+        cp package.json package-lock.json LICENSE README.md out/
         rm out/config.js
         
     - name: Upload a Build Artifact
