--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "express-graphql": "^0.12.0",
         "googleapis": "^89.0.0",
         "googleapis-common": "^5.0.5",
+        "js-yaml": "^4.1.0",
         "mysql2-async": "^1.1.1",
         "typescript": "^4.4.3"
     },
     "devDependencies": {
+        "@types/js-yaml": "^4.0.4",
         "@types/express": "^4.17.13",
         "@typescript-eslint/eslint-plugin": "^5.2.0",
         "@typescript-eslint/parser": "^4.33.0",
