--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "out/server.js",
     "scripts": {
         "start": "gulp; node out/server.js",
+        "build": "gulp",
         "no-build": "node out/server.js"
     },
     "author": "Alex",
@@ -24,6 +25,7 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/js-yaml": "^4.0.4",
+        "@types/yargs": "^17.0.4",
         "@typescript-eslint/eslint-plugin": "^5.2.0",
         "@typescript-eslint/parser": "^5.2.0",
         "eslint": "^8.1.0",
