--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -2,9 +2,9 @@ name: NodeJS with Gulp
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -13,34 +13,29 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-    
+
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Build
-      run: |
-        npm ci --dev
-        gulp
-      
-    - name: Package
-      run: |
-        cp package.json package-lock.json LICENSE README.md out/
-        rm out/config.js
-        
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        # Artifact name
-        name: buildout # optional, default is artifact
-        # A file, directory or wildcard pattern that describes what to upload
-        path: out/
-        # The desired behavior if no files are found using the provided path.
-        if-no-files-found: warn # optional, default is warn
-        # Duration after which artifact will expire in days. 0 means using default retention. Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
+      - name: Build
+        run: |
+          npm ci --dev
+          gulp
 
-        retention-days: 1
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          # Artifact name
+          name: buildout # optional, default is artifact
+          # A file, directory or wildcard pattern that describes what to upload
+          path: ./
+          # The desired behavior if no files are found using the provided path.
+          if-no-files-found: warn # optional, default is warn
+          # Duration after which artifact will expire in days. 0 means using default retention. Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
+
+          retention-days: 1
