--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.24.2",
         "gulp": "^4.0.2",
-        "gulp-typescript": "^6.0.0-alpha.1"
+        "gulp-typedoc": "^3.0.1",
+        "gulp-typescript": "^6.0.0-alpha.1",
+        "typedoc": "^0.22.7"
     }
 }
