--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "version": "0.1.0",
     "description": "Private API for the dutchtime manager app.",
     "main": "out/server.js",
+    "type": "module",
     "scripts": {
-        "start": "gulp && node out/server.js",
-        "build": "gulp",
+        "start": "gulp -f gulpfile.cjs && node out/server.js",
+        "build": "gulp -f gulpfile.cjs",
         "no-build": "node out/server.js"
     },
     "author": "Alex",
@@ -13,15 +14,17 @@
     "private": true,
     "dependencies": {
         "@js-temporal/polyfill": "^0.2.0",
+        "bree": "^6.5.0",
         "express": "^4.17.1",
         "googleapis": "^91.0.0",
         "googleapis-common": "^5.0.5",
         "js-yaml": "^4.1.0",
         "mysql2-async": "^1.1.1",
-        "typescript": "^4.4.3",
+        "typescript": "^4.6.0-dev.20211109",
         "yargs": "^17.2.1"
     },
     "devDependencies": {
+        "@types/bree": "^6.2.1",
         "@types/express": "^4.17.13",
         "@types/js-yaml": "^4.0.4",
         "@types/yargs": "^17.0.5",
