--- a/package.json
+++ b/package.json
@@ -5,26 +5,27 @@
     "main": "out/server.js",
     "type": "module",
     "scripts": {
-        "start": "gulp -f gulpfile.cjs && node out/server.js",
+        "start": "npm run build && npm run run",
+        "start:dev": "tsc && npm run run:dev",
         "build": "gulp -f gulpfile.cjs",
-        "no-build": "node out/server.js"
+        "run": "node out/server.js",
+        "run:dev": "node -r source-map-support/register out/server.js"
     },
     "author": "Alex",
     "license": "MPL-2.0",
     "private": true,
     "dependencies": {
         "@js-temporal/polyfill": "^0.2.0",
-        "bree": "^6.5.0",
+        "bree": "^7.1.0",
         "express": "^4.17.1",
         "googleapis": "^91.0.0",
         "googleapis-common": "^5.0.5",
         "js-yaml": "^4.1.0",
         "mysql2-async": "^1.1.1",
-        "typescript": "^4.6.0-dev.20211109",
+        "typescript": "next",
         "yargs": "^17.2.1"
     },
     "devDependencies": {
-        "@types/bree": "^6.2.1",
         "@types/express": "^4.17.13",
         "@types/js-yaml": "^4.0.4",
         "@types/yargs": "^17.0.5",
@@ -34,6 +35,7 @@
         "gulp": "^4.0.2",
         "gulp-typedoc": "^3.0.1",
         "gulp-typescript": "^6.0.0-alpha.1",
+        "source-map-support": "^0.5.20",
         "typedoc": "^0.22.7"
     }
 }
