--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -22,14 +22,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Build
-        run: |
-          npm ci --dev
-          gulp
+      - name: Install dependencies
+        run: npm ci --include=dev
 
+      - name: Build with gulp
+        run: npm run build
+          
       - name: Prepare for packageing
-        run: |
-          rm -rf node_modules/
+        run: rm -rf node_modules/
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.4
