--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@js-temporal/polyfill": "^0.3.0",
         "bree": "^7.1.0",
         "express": "^4.17.1",
+        "express-rate-limit": "^5.5.1",
         "googleapis": "^92.0.0",
         "googleapis-common": "^5.0.5",
         "js-yaml": "^4.1.0",
@@ -26,6 +27,7 @@
         "yargs": "^17.3.0"
     },
     "devDependencies": {
+        "@types/express-rate-limit": "^5.1.3",
         "@types/express": "^4.17.13",
         "@types/js-yaml": "^4.0.5",
         "@types/yargs": "^17.0.7",
