--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "@types/express": "^4.17.13",
         "@types/js-yaml": "^4.0.5",
         "@types/yargs": "^17.0.8",
-        "@typescript-eslint/eslint-plugin": "^5.10.0",
+        "@types/node": "^17.0.12",
         "@typescript-eslint/parser": "^5.8.1",
         "eslint": "^8.7.0",
         "gulp": "^4.0.2",
